# rag-virtual-assistant-course

./: .Host.swp  .gitignore  01_slides.pptx  Levels_Of_Text_Splitting.ipynb  README.md  pyproject.toml  ~$01_slides.pptx
backend/: main.py
chroma_store/95376e91-4394-471b-bb76-251188a7aa0b/: index_metadata.pickle
eval/: create_dataset.py
frontend/: ui.py
notebooks/: 01_A_RAG_Intro.ipynb  01_B_Query Transformations.ipynb  01_lesson.ipynb  02_Retrieval.ipynb  03_LangGraph_Basics.ipynb  app_architecture.ipynb  langgraph_basics.ipynb  levels_of_text_splitting.ipynb
