[tool.poetry]
name = "rag-virtual-assistant-course"
version = "0.1.0"
description = "A tutorial series on building RAG-based virtual assistants."
authors = ["thanos pantos <pantos.thn@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.24"
langchain-community = "^0.3.23"
langchain-openai = "^0.3.14"
langchainhub = "^0.1.21"
tiktoken = "^0.9.0"
notebook = "^7.4.1"
python-dotenv = "^1.1.0"
sentence-transformers = "^4.1.0"
langchain-huggingface = "^0.1.2"
ipywidgets = "^8.1.6"
langgraph = "^0.4.1"
requests = "^2.32.3"
gradio = "^5.28.0"
certifi = "^2025.4.26"
uvicorn = "^0.34.2"
pypdf = "^5.4.0"
langsmith = "^0.3.40"
langchain-chroma = "^0.2.3"
matplotlib = "^3.10.3"
graphviz = "^0.20.3"
llama-index = "^0.12.36"
unstructured = "^0.17.2"
pdf2image = "^1.17.0"
langchain-tavily = "^0.1.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
